# mmi

./: .gitignore  AGENTS.md  CLAUDE.md  MMI_PHASE_PLAN.md  PLAN.md  README.md  README_en.md  ROUND_LOG.md  RULES.md  WORKLOG.md  _patch_storage.py  mmi_tool_extension_list.md  pyproject.toml  verify_config.py
.cc-connect/attachments/: mmi_windows_test_fix_report.md  user_prompt_1780657849.md  user_prompt_1780657897.md  user_prompt_1780658862.md
.github/workflows/: ci.yml
REPORTS/: P1A-Round_Completed.md
docs/: ARCHITECTURE.md  HANDOVER.md  INDEX.md  ctrim-PLAN.md  ctrim-SESSION_LOG.md  mmi-gui-plan.md
docs/HANDOVER/: INDEX.md  round_2.md  round_2_2.md  round_2_3.md  (+5 more)
mmi/: __init__.py  __main__.py  cli.py  tui_v3.py
tests/: _fakes.py  conftest.py  test_agent_phase3.py  test_anthropic_sse.py  test_audit.py  test_batch_chat.py  test_benchmark.py  test_chat_result.py  test_classifier.py  test_cli.py  test_cli_tui.py  test_config.py  test_config_schema.py  test_context.py  test_evaluation.py  test_event_bus.py  test_event_bus_hooks.py  test_event_bus_throttle.py  test_gc.py  test_gc_daemon.py  test_heat.py  test_i18n.py  test_integration.py  test_llm.py  test_llm_retry.py  test_llm_stream.py  test_llm_stream_retry.py  test_loader.py  test_manager.py  test_manager_thread_safety.py  test_mcp_server.py  test_memory.py  test_model_fetcher.py  test_orchestrator_phase4.py  test_parse_blocks.py  test_paths.py  test_pipeline.py  test_provider_health.py  test_provider_params.py  test_provider_registry.py  (+10 more)
tui-ts/: package-lock.json  package.json  tsconfig.json  tsup.config.ts
(+194 files in other folders)
